Added Game Functionality.

--- a/examples/Clients.Console/App.config
+++ b/examples/Clients.Console/App.config
@@ -10,6 +10,11 @@
                 binding="netTcpBinding"
                 contract="Kingo.Samples.Chess.Challenges.IChallengeService" />
 
+      <endpoint name="GameService_NetTcp"
+                address="net.tcp://localhost:1002/Games"
+                binding="netTcpBinding"
+                contract="Kingo.Samples.Chess.Games.IGameService" />
+
       <endpoint name="PlayerService_NetTcp"
                 address="net.tcp://localhost:1002/Players"
                 binding="netTcpBinding"
