--- a/examples/Server.Api/02.Server.Api.csproj
+++ b/examples/Server.Api/02.Server.Api.csproj
@@ -30,9 +30,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo, Version=2.0.13.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo, Version=2.0.17.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.2.0.13-beta\lib\net45\Kingo.dll</HintPath>
+      <HintPath>..\packages\Kingo.2.0.17-beta\lib\net45\Kingo.dll</HintPath>
     </Reference>
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.5.2.12\lib\net45\NServiceBus.Core.dll</HintPath>
@@ -60,6 +60,13 @@
     <Compile Include="Challenges\PendingChallenge.cs" />
     <Compile Include="Challenges\PlayerChallengedEvent.cs" />
     <Compile Include="Challenges\RejectChallengeCommand.cs" />
+    <Compile Include="Games\ActiveGame.cs" />
+    <Compile Include="Games\ForfeitGameCommand.cs" />
+    <Compile Include="Games\GameForfeitedEvent.cs" />
+    <Compile Include="Games\GameStartedEvent.cs" />
+    <Compile Include="Games\GetActiveGamesRequest.cs" />
+    <Compile Include="Games\GetActiveGamesResponse.cs" />
+    <Compile Include="Games\IGameService.cs" />
     <Compile Include="SessionBehavior.cs" />
     <Compile Include="Players\GetPlayersRequest.cs" />
     <Compile Include="Players\GetPlayersResponse.cs" />
@@ -75,9 +82,7 @@
     </Compile>
     <Compile Include="Session.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Games\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <EmbeddedResource Include="Resources\ErrorMessages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
