--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -18,17 +18,23 @@
           <baseAddresses>
             <add baseAddress="http://localhost:1001/Challenges" />
           </baseAddresses>
-        </host>
-        <!--<endpoint address="Challenges" binding="basicHttpBinding" contract="Kingo.Samples.Chess.Challenges.IChallengeService" />-->
+        </host>        
         <endpoint address="net.tcp://localhost:1002/Challenges" binding="netTcpBinding" contract="Kingo.Samples.Chess.Challenges.IChallengeService" />
+      </service>
+      <service name="Kingo.Samples.Chess.Games.GameService">
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:1001/Games" />
+          </baseAddresses>
+        </host>
+        <endpoint address="net.tcp://localhost:1002/Games" binding="netTcpBinding" contract="Kingo.Samples.Chess.Games.IGameService" />
       </service>
       <service name="Kingo.Samples.Chess.Players.PlayerService">
         <host>
           <baseAddresses>
             <add baseAddress="http://localhost:1001/Players" />
           </baseAddresses>
-        </host>
-        <!--<endpoint address="Players" binding="basicHttpBinding" contract="Kingo.Samples.Chess.Players.IPlayerService" />-->
+        </host>        
         <endpoint address="net.tcp://localhost:1002/Players" binding="netTcpBinding" contract="Kingo.Samples.Chess.Players.IPlayerService" />
       </service>
     </services>
@@ -64,9 +70,9 @@
   <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />  
   <UnicastBusConfig>
     <MessageEndpointMappings>
-      <add Assembly="Kingo.Samples.Chess.Api" Endpoint="kingo.samples.chess" />
+      <add Assembly="Kingo.Samples.Chess.Api" Endpoint="kingo.samples.chess" />      
     </MessageEndpointMappings>
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />  
-  <!-- END NServiceBus -->
+  <!-- END NServiceBus -->    
 </configuration>
