--- a/examples/Clients.Console/Clients.ConsoleApp.csproj
+++ b/examples/Clients.Console/Clients.ConsoleApp.csproj
@@ -33,9 +33,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo, Version=2.0.13.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+    <Reference Include="Kingo, Version=2.0.17.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.2.0.13-beta\lib\net45\Kingo.dll</HintPath>
+      <HintPath>..\packages\Kingo.2.0.17-beta\lib\net45\Kingo.dll</HintPath>
     </Reference>
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.5.2.12\lib\net45\NServiceBus.Core.dll</HintPath>
@@ -57,16 +57,20 @@
     <Compile Include="ChessApplicationState.cs" />
     <Compile Include="Commandlets\ChallengePlayerCommandlet.cs" />
     <Compile Include="Commandlets\ExitApplicationCommandlet.cs" />
+    <Compile Include="Commandlets\ExitGameCommandlet.cs" />
     <Compile Include="Commandlets\GetChallengeCommandlet.cs" />
+    <Compile Include="Commandlets\GetGameCommandlet.cs" />
     <Compile Include="Commandlets\GetPlayerCommandlet.cs" />
     <Compile Include="Commandlets\LoginPlayerCommandlet.cs" />
     <Compile Include="Commandlets\LogoutPlayerCommandlet.cs" />
     <Compile Include="Commandlets\RegisterPlayerCommandlet.cs" />
     <Compile Include="Commandlets\ShowHelpCommandlet.cs" />
     <Compile Include="Proxies\ChallengeServiceProxy.cs" />
+    <Compile Include="Proxies\GameServiceProxy.cs" />
     <Compile Include="Proxies\PlayerServiceProxy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="States\LoggedInState.cs" />
+    <Compile Include="States\PlayingGameState.cs" />
     <Compile Include="States\StartedState.cs" />
     <Compile Include="States\StoppedState.cs" />
     <Compile Include="MissingCommandArgumentException.cs" />
