--- a/examples/Server.Tests/01.Server.Tests.csproj
+++ b/examples/Server.Tests/01.Server.Tests.csproj
@@ -37,13 +37,16 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Kingo">
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.dll</HintPath>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.17-beta\lib\net451\Kingo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kingo.Server">
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.Server.dll</HintPath>
+    <Reference Include="Kingo.Server, Version=2.0.17.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.17-beta\lib\net451\Kingo.Server.dll</HintPath>
     </Reference>
-    <Reference Include="Kingo.Server.TestEngine">
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.13-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
+    <Reference Include="Kingo.Server.TestEngine, Version=2.0.17.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.0.17-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -98,6 +101,12 @@
     <Compile Include="Challenges\RejectChallenge\ChallengeDoesNotExistScenario.cs" />
     <Compile Include="Challenges\RejectChallenge\ChallengeIsRejectedScenario.cs" />
     <Compile Include="Challenges\RejectChallenge\PlayerIsNotReceiverScenario.cs" />
+    <Compile Include="Games\ChallengeAccepted\GameIsStartedScenario.cs" />
+    <Compile Include="Games\ForfeitGame\GameAlreadyEndedScenario.cs" />
+    <Compile Include="Games\ForfeitGame\GameIsForfeitedScenario.cs" />
+    <Compile Include="Games\ForfeitGame\GameNotFoundScenario.cs" />
+    <Compile Include="Games\ForfeitGame\SenderIsNoPlayerScenario.cs" />
+    <Compile Include="Games\MemoryGameRepository.cs" />
     <Compile Include="Players\RegisterPlayer\PlayerIsRegisteredScenario.cs" />
     <Compile Include="Players\RegisterPlayer\PlayerAlreadyRegisteredScenario.cs" />
     <Compile Include="Players\MemoryPlayerRepository.cs" />
