--- a/src/Kingo/02.Kingo.csproj
+++ b/src/Kingo/02.Kingo.csproj
@@ -106,8 +106,8 @@
     <Compile Include="Messaging\Domain\DomainEvent.cs" />
     <Compile Include="Messaging\Domain\DomainEvent.T2.cs" />
     <Compile Include="Messaging\Domain\DomainException.cs" />
-    <Compile Include="Messaging\Domain\IKeyedObject.T1.cs" />
-    <Compile Include="Messaging\Domain\IVersionedObject.T2.cs" />
+    <Compile Include="Messaging\Domain\IHasKey.T1.cs" />
+    <Compile Include="Messaging\Domain\IHasVersion.T2.cs" />
     <Compile Include="Messaging\ErrorInheritanceLevel.cs" />
     <Compile Include="Messaging\ErrorMessageReader.cs" />
     <Compile Include="Identifier.cs" />
