--- a/src/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
+++ b/src/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
@@ -57,7 +57,7 @@
     </Compile>
     <Compile Include="GlobalSuppressions.cs" />
     <Compile Include="Messaging\AlternateFlow.T1.cs" />
-    <Compile Include="Messaging\Domain\MemoryRepository.T3.cs" />
+    <Compile Include="Messaging\Domain\InMemoryRepository.T3.cs" />
     <Compile Include="Messaging\ExecutionFlow.T1.cs" />
     <Compile Include="Messaging\HappyFlow.T1.cs" />
     <Compile Include="Messaging\IExecutable.cs" />
