Added support for queries without parameters.

--- a/src/Kingo.Server/04.Kingo.Server.csproj
+++ b/src/Kingo.Server/04.Kingo.Server.csproj
@@ -76,10 +76,11 @@
     <Compile Include="Messaging\Domain\TypeToContractMapException.cs" />
     <Compile Include="Messaging\EmptySequence.cs" />
     <Compile Include="Messaging\IDependencyConfiguration.cs" />
-    <Compile Include="Messaging\IMessageHandlerOrQuery.cs" />
+    <Compile Include="Messaging\IMessageHandlerOrQueryWrapper.cs" />
     <Compile Include="Messaging\IMessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\IMessageSequence.cs" />
     <Compile Include="Messaging\InvalidEventException.cs" />
+    <Compile Include="Messaging\IQuery.T1.cs" />
     <Compile Include="Messaging\MessageHandlerConfiguration.cs" />
     <Compile Include="Messaging\MessageHandlerDispatcher.cs" />
     <Compile Include="Messaging\MessageHandlerInstance.T1.cs" />
@@ -90,9 +91,9 @@
     <Compile Include="Messaging\MessageToStrategyMapping.cs" />
     <Compile Include="Clocks\ClockModule.cs" />
     <Compile Include="Messaging\IMessageToStrategyMapping.T1.cs" />
-    <Compile Include="Messaging\IQuery.T1.cs" />
+    <Compile Include="Messaging\IQueryWrapper.T1.cs" />
     <Compile Include="Messaging\DependencyAttribute.cs" />
-    <Compile Include="Messaging\IMessageHandler.cs" />
+    <Compile Include="Messaging\IMessageHandlerWrapper.cs" />
     <Compile Include="Messaging\MessageHandler.cs" />
     <Compile Include="Messaging\MessageHandler.T1.cs" />
     <Compile Include="Messaging\MessageHandlerModule.cs" />
@@ -103,11 +104,14 @@
     <Compile Include="Messaging\MessageSources.cs" />
     <Compile Include="Messaging\MessageHandlerDispatcher.T1.cs" />
     <Compile Include="Messaging\MessageToStrategyMapping.T1.cs" />
+    <Compile Include="Messaging\NullMessage.cs" />
     <Compile Include="Messaging\Query.T1.cs" />
+    <Compile Include="Messaging\QueryDelegate.T1.cs" />
     <Compile Include="Messaging\QueryDispatcherModule.T1.cs" />
     <Compile Include="Messaging\QueryModule.cs" />
     <Compile Include="Messaging\QueryModule.T1.cs" />
     <Compile Include="Messaging\QueryPipeline.cs" />
+    <Compile Include="Messaging\QueryWrapper.T1.cs" />
     <Compile Include="Messaging\QueryWrapper.T2.cs" />
     <Compile Include="Transactions\ITransactionScopeFactory.cs" />
     <Compile Include="Transactions\TransactionScopeAttribute.cs" />
@@ -121,7 +125,7 @@
     <Compile Include="Messaging\Domain\AggregateNotFoundException.cs" />
     <Compile Include="Messaging\Domain\EventBuffer.T3.cs" />
     <Compile Include="Messaging\Domain\AggregateRoot.T2.cs" />
-    <Compile Include="Messaging\MessageHandlerDelegate.T2.cs" />
+    <Compile Include="Messaging\QueryDelegate.T2.cs" />
     <Compile Include="Messaging\IMessageProcessorBusConnection.cs" />
     <Compile Include="Messaging\IQuery.T2.cs" />
     <Compile Include="Messaging\MessageHandlerDecorator.T1.cs" />
