--- a/examples/Server.Domain/04.Server.Domain.csproj
+++ b/examples/Server.Domain/04.Server.Domain.csproj
@@ -31,11 +31,13 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo">
-      <HintPath>..\packages\Kingo.Server.2.1.2-beta\lib\net451\Kingo.dll</HintPath>
+    <Reference Include="Kingo, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kingo.Server.2.1.3-beta\lib\net451\Kingo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kingo.Server">
-      <HintPath>..\packages\Kingo.Server.2.1.2-beta\lib\net451\Kingo.Server.dll</HintPath>
+    <Reference Include="Kingo.Server, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kingo.Server.2.1.3-beta\lib\net451\Kingo.Server.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="NServiceBus.Core">
       <HintPath>..\packages\NServiceBus.5.2.12\lib\net45\NServiceBus.Core.dll</HintPath>
@@ -82,7 +84,6 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
