--- a/examples/Server.Tests/01.Server.Tests.csproj
+++ b/examples/Server.Tests/01.Server.Tests.csproj
@@ -36,15 +36,17 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Kingo">
-      <HintPath>..\packages\Kingo.Server.2.1.2-beta\lib\net451\Kingo.dll</HintPath>
+    <Reference Include="Kingo, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kingo.Server.2.1.3-beta\lib\net451\Kingo.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kingo.Server">
-      <HintPath>..\packages\Kingo.Server.2.1.2-beta\lib\net451\Kingo.Server.dll</HintPath>
+    <Reference Include="Kingo.Server, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kingo.Server.2.1.3-beta\lib\net451\Kingo.Server.dll</HintPath>
+      <Private>True</Private>
     </Reference>
-    <Reference Include="Kingo.Server.TestEngine, Version=2.1.2.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Kingo.Server.TestEngine.2.1.2-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
+    <Reference Include="Kingo.Server.TestEngine, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
+      <HintPath>..\packages\Kingo.Server.TestEngine.2.1.3-beta\lib\net451\Kingo.Server.TestEngine.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.Practices.ServiceLocation, Version=1.3.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
@@ -136,6 +138,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup />
