--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -75,4 +75,12 @@
   </UnicastBusConfig>
   <AuditConfig QueueName="audit" />  
   <!-- END NServiceBus -->    
+  <runtime>    
+         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">    
+                <dependentAssembly>    
+                       <assemblyIdentity name="Kingo" publicKeyToken="cbd9f157c5e464e2" culture="neutral" />    
+                       <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />    
+                </dependentAssembly>    
+         </assemblyBinding>    
+  </runtime>
 </configuration>
