--- a/examples/Server/02.Server.csproj
+++ b/examples/Server/02.Server.csproj
@@ -33,7 +33,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <StartupObject>Kingo.Samples.Chess.ServerProcessor</StartupObject>
+    <StartupObject>Kingo.Samples.Chess.ServiceBus</StartupObject>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Kingo, Version=2.1.3.0, Culture=neutral, PublicKeyToken=cbd9f157c5e464e2, processorArchitecture=MSIL">
@@ -44,8 +44,13 @@
       <HintPath>..\packages\Kingo.Server.2.1.3-beta\lib\net451\Kingo.Server.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="RabbitMQ.Client, Version=3.6.0.0, Culture=neutral, PublicKeyToken=89e7d7c5feba84ce, processorArchitecture=MSIL">
+      <HintPath>..\packages\RabbitMQ.Client.3.6.0\lib\net45\RabbitMQ.Client.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
+    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
@@ -58,11 +63,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Challenges\ChallengeService.cs" />
-    <Compile Include="FaultExceptionModule.cs" />
+    <Compile Include="ErrorHandlerModule.cs" />
     <Compile Include="Games\GameService.cs" />
     <Compile Include="Players\PlayerService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ServerProcessor.cs" />
+    <Compile Include="ServiceProcessor.cs" />
+    <Compile Include="ServiceBus.cs" />
     <Compile Include="ServiceHostManager.cs" />
   </ItemGroup>
   <ItemGroup>
