--- a/examples/Server/App.config
+++ b/examples/Server/App.config
@@ -1,12 +1,8 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
-<configuration>
-  <configSections>
-    <section name="MessageForwardingInCaseOfFaultConfig" type="NServiceBus.Config.MessageForwardingInCaseOfFaultConfig, NServiceBus.Core" />    
-    <section name="UnicastBusConfig" type="NServiceBus.Config.UnicastBusConfig, NServiceBus.Core" />
-    <section name="AuditConfig" type="NServiceBus.Config.AuditConfig, NServiceBus.Core" />
-  </configSections>
+<configuration>  
   <connectionStrings>
-    <add name="Server.Data.Sql" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Kingo.Samples.Chess;Integrated Security=True;Pooling=True" />
+    <add name="ChessDatabase" connectionString="Data Source=.\SQLEXPRESS;Initial Catalog=Chess;Integrated Security=True;Pooling=True" />
+    <add name="RabbitMQ" connectionString="amqp://guest:guest@localhost:5672/%2f" />
   </connectionStrings>
   <system.web>
     <compilation debug="true" />
@@ -64,23 +60,5 @@
         <binding maxReceivedMessageSize="2147483647" />
       </netTcpBinding>
     </bindings>
-  </system.serviceModel>  
-  
-  <!-- BEGIN NServiceBus -->
-  <MessageForwardingInCaseOfFaultConfig ErrorQueue="error" />  
-  <UnicastBusConfig>
-    <MessageEndpointMappings>
-      <add Assembly="Kingo.Samples.Chess.Api" Endpoint="kingo.samples.chess" />      
-    </MessageEndpointMappings>
-  </UnicastBusConfig>
-  <AuditConfig QueueName="audit" />  
-  <!-- END NServiceBus -->    
-  <runtime>    
-         <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">    
-                <dependentAssembly>    
-                       <assemblyIdentity name="Kingo" publicKeyToken="cbd9f157c5e464e2" culture="neutral" />    
-                       <bindingRedirect oldVersion="0.0.0.0-2.1.3.0" newVersion="2.1.3.0" />    
-                </dependentAssembly>    
-         </assemblyBinding>    
-  </runtime>
+  </system.serviceModel>    
 </configuration>
