--- a/examples/Server/packages.config
+++ b/examples/Server/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="Kingo" version="2.1.3-beta" targetFramework="net451" />
   <package id="Kingo.Server" version="2.1.3-beta" targetFramework="net451" />
+  <package id="RabbitMQ.Client" version="3.6.0" targetFramework="net451" />
 </packages>
