--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,4 +2,6 @@
 <repositories>
   <repository path="..\Kingo.Server.Tests\packages.config" />
   <repository path="..\Kingo.Server\packages.config" />
+  <repository path="..\Kingo.Tests\packages.config" />
+  <repository path="..\Kingo\packages.config" />
 </repositories>
