Added a bunch of untracked files.

--- a/src/Kingo.Server.TestEngine.Tests/01.Kingo.Server.TestEngine.Tests.csproj
+++ b/src/Kingo.Server.TestEngine.Tests/01.Kingo.Server.TestEngine.Tests.csproj
@@ -28,7 +28,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <CodeAnalysisRuleSet>S:\SupportFiles\RuleSets\UnitTestProjects.ruleset</CodeAnalysisRuleSet>
+    <CodeAnalysisRuleSet>ManagedMinimumRules.ruleset</CodeAnalysisRuleSet>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
