Fixed the post-build events.

--- a/src/Kingo.Server/04.Kingo.Server.csproj
+++ b/src/Kingo.Server/04.Kingo.Server.csproj
@@ -216,7 +216,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)\BuildNuGetPackage.bat" "$(ProjectPath)"
+    <PostBuildEvent>IF $(ConfigurationName) == Release (
+    "$(SolutionDir)BuildNuGetPackage.bat" "$(ProjectPath)" "$(SolutionDir)..\output"
+)
 </PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
