--- a/src/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
+++ b/src/Kingo.Server.TestEngine/02.Kingo.Server.TestEngine.csproj
@@ -97,7 +97,9 @@
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PostBuildEvent>"$(SolutionDir)\BuildNuGetPackage.bat" "$(ProjectPath)"</PostBuildEvent>
+    <PostBuildEvent>IF $(ConfigurationName) == Release (
+    "$(SolutionDir)BuildNuGetPackage.bat" "$(ProjectPath)" "$(SolutionDir)..\output"
+)</PostBuildEvent>
   </PropertyGroup>
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
