--- a/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
+++ b/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
@@ -9,7 +9,7 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>Kingo</RootNamespace>
-    <AssemblyName>Kingo.Server</AssemblyName>
+    <AssemblyName>Kingo.MessageProcessor</AssemblyName>
     <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <TargetFrameworkProfile />
@@ -32,7 +32,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>bin\Release\Kingo.Server.xml</DocumentationFile>
+    <DocumentationFile>bin\Release\Kingo.MessageProcessor.xml</DocumentationFile>
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
@@ -200,7 +200,7 @@
     <None Include="..\Kingo.snk">
       <Link>Properties\Kingo.snk</Link>
     </None>
-    <None Include="Properties\Kingo.Server.nuspec">
+    <None Include="Properties\Kingo.MessageProcessor.nuspec">
       <SubType>Designer</SubType>
     </None>
     <None Include="Properties\Kingo.Server.targets" />
