--- a/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
+++ b/src/Kingo.MessageProcessor/04.Kingo.MessageProcessor.csproj
@@ -106,7 +106,7 @@
     <Compile Include="Messaging\MessageHandlerInstance.T1.cs" />
     <Compile Include="Messaging\MessageSequence.cs" />
     <Compile Include="Messaging\MessageSequenceConcatenation.cs" />
-    <Compile Include="Messaging\MessageSequenceNode.T1.cs" />
+    <Compile Include="Messaging\MessageToHandle.T1.cs" />
     <Compile Include="Messaging\MessageSequencePair.cs" />
     <Compile Include="Messaging\MessageToStrategyMapping.cs" />
     <Compile Include="Clocks\ClockModule.cs" />
